fix: header 및 bottom-bar z-index 설정

--- a/week2/parkcoool/index.css
+++ b/week2/parkcoool/index.css
@@ -10,6 +10,7 @@ body {
     justify-content: space-between;
     align-items: center;
     position: sticky;
+    z-index: 2;
     top: 0;
     width: 100%;
     box-sizing: border-box;
@@ -286,6 +287,7 @@ body {
 
 .bottom-bar {
     position: sticky;
+    z-index: 2;
     bottom: 0;
     width: 100%;
     bottom: 0;
